; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192su/extr_r8192U_core.c_write_nic_byte.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/rtl8192su/extr_r8192U_core.c_write_nic_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.r8192_priv = type { %struct.usb_device* }
%struct.usb_device = type { i32 }

@RTL8187_REQ_SET_REGS = common dso_local global i32 0, align 4
@RTL8187_REQT_WRITE = common dso_local global i32 0, align 4
@HZ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"write_nic_byte TimeOut! status:%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_nic_byte(%struct.net_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.net_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.r8192_priv*, align 8
  %9 = alloca %struct.usb_device*, align 8
  store %struct.net_device* %0, %struct.net_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load %struct.net_device*, %struct.net_device** %4, align 8
  %11 = call i64 @ieee80211_priv(%struct.net_device* %10)
  %12 = inttoptr i64 %11 to %struct.r8192_priv*
  store %struct.r8192_priv* %12, %struct.r8192_priv** %8, align 8
  %13 = load %struct.r8192_priv*, %struct.r8192_priv** %8, align 8
  %14 = getelementptr inbounds %struct.r8192_priv, %struct.r8192_priv* %13, i32 0, i32 0
  %15 = load %struct.usb_device*, %struct.usb_device** %14, align 8
  store %struct.usb_device* %15, %struct.usb_device** %9, align 8
  %16 = load %struct.usb_device*, %struct.usb_device** %9, align 8
  %17 = load %struct.usb_device*, %struct.usb_device** %9, align 8
  %18 = call i32 @usb_sndctrlpipe(%struct.usb_device* %17, i32 0)
  %19 = load i32, i32* @RTL8187_REQ_SET_REGS, align 4
  %20 = load i32, i32* @RTL8187_REQT_WRITE, align 4
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* @HZ, align 4
  %23 = sdiv i32 %22, 2
  %24 = call i32 @usb_control_msg(%struct.usb_device* %16, i32 %18, i32 %19, i32 %20, i32 %21, i32 0, i32* %6, i32 1, i32 %23)
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %7, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %3
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @printk(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %28)
  br label %30

30:                                               ; preds = %27, %3
  ret void
}

declare dso_local i64 @ieee80211_priv(%struct.net_device*) #1

declare dso_local i32 @usb_control_msg(%struct.usb_device*, i32, i32, i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @usb_sndctrlpipe(%struct.usb_device*, i32) #1

declare dso_local i32 @printk(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
